--- a/views/index.pug
+++ b/views/index.pug
@@ -4,7 +4,7 @@ block content
   h1= title
   p Welcome to #{title}
   form(action="/test", method="POST")
-    input#username(type="text")  
-    input#password(type="password")
+    input#username(type="text", name="username")  
+    input#password(type="password", name="password")
     button(type="submit") Test
 
